[package]
name = "eframe_tokio_app"
version = "0.5.0"
edition = "2021"
rust-version = "1.61.0"
authors = ["Ar37-rs <adyaro37@gmail.com>"]
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# eframe = { path = "../egui/crates/eframe" }
# egui_extras = { path = "../egui/crates/egui_extras", features = ["image"] }
eframe = "0.19"
egui_extras = { version = "0.19", features = ["image"] }
flowync = { version = "5.1.0" }
image = { version = "0.24", default-features = false, features = [
    "jpeg",
    "png",
] }
reqwest = { version = "0.11" }
tokio = { version = "1", features = ["full"] }
